tests/fail/example.t
  $ echo "placeholder failing test" > /dev/null
